--- a/css/styles.css
+++ b/css/styles.css
@@ -493,8 +493,7 @@ input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):
   gap: 10px;
 }
 
-.botones-form input,
-.botones-form button {
+.botones-form input {
   background-color: #393839;
   border: none;
   border-radius: 20px;
@@ -504,8 +503,8 @@ input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):
   cursor: pointer;
   color: #F7F7FF;
 }
-.botones-form input:hover,
-.botones-form button:hover {
+
+.botones-form input:hover {
   color: #f9c610;
 }
 
