--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,11 +3,11 @@ footer {
     padding: 20px 0;
     p {
         text-align: center;
-        color: $blanco;
+        color: $secundario;
     }
     
     a {
-        color: $blanco;
+        color: $secundario;
     }
 }
 
