--- a/scss/_thanks.scss
+++ b/scss/_thanks.scss
@@ -1,5 +1,5 @@
 #main-thanks {
-    color: $blanco;
+    color: $secundario;
     height: 100vh;
     margin-top: 0;
 }
@@ -11,8 +11,8 @@
 }
 
 #main-thanks a {
-    background-color: $blanco;
-    color: $secundario;
+    background-color: $secundario;
+    color: $primario;
     border-radius: 20px;
     padding: 10px 20px;
     font-size: 1.5rem;
