--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,6 @@
-@import 'globales';
+@import 'variables';
 @import 'extends-mixin';
+@import 'globales';
 @import 'header';
 @import 'main';
 @import 'servicios';
