--- a/scss/_404.scss
+++ b/scss/_404.scss
@@ -1,5 +1,5 @@
 #body-404 {
-    background-color: #393839;
+    background-color: #126762;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,6 +13,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: unset;
 }
 
 .titulo-error, .parrafo-error {
