--- a/css/styles.css
+++ b/css/styles.css
@@ -257,10 +257,14 @@ button a:hover {
   right: unset;
 }
 
+.lista-tareas {
+  max-width: 75ch;
+  margin: 0 auto;
+}
+
 .lista-tareas li {
   list-style-type: disc !important;
-  font-size: 1.7rem;
-  margin-left: 50px;
+  font-size: 1.8rem;
 }
 
 @media (min-width: 992px) {
